pymatex/grammar/MatexParser.py
# Generated from .\pymatex\grammar\MatexParser.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MatexParser ( Parser ):

    grammarFileName = "MatexParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "','", "'.'", "'|'", "'_'", 
                     "'^'", "':'", "'\\lim'", "<INVALID>", "'K'", "'\\int'", 
                     "'\\sum'", "'\\prod'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\times'", "'\\cdot'", "'\\div'", "'\\frac'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\infty'", "'='", "<INVALID>", "'!'" ]

    symbolicNames = [ "<INVALID>", "PLUS", "MINUS", "MUL", "DIV", "L_PAREN", 
                      "R_PAREN", "L_BRACE", "R_BRACE", "L_BRACKET", "R_BRACKET", 
                      "COMMA", "DOT", "BAR", "UNDERSCORE", "CARET", "COLON", 
                      "FUNC_LIM", "LIM_APPROACH_SYM", "FUNC_FRAC", "FUNC_INT", 
                      "FUNC_SUM", "FUNC_PROD", "FUNC_LOG", "FUNC_LN", "FUNC_SIN", 
                      "FUNC_COS", "FUNC_TAN", "FUNC_CSC", "FUNC_SEC", "FUNC_COT", 
                      "FUNC_ARCSIN", "FUNC_ARCCOS", "FUNC_ARCTAN", "FUNC_ARCCSC", 
                      "FUNC_ARCSEC", "FUNC_ARCCOT", "FUNC_SINH", "FUNC_COSH", 
                      "FUNC_TANH", "FUNC_ARCSINH", "FUNC_ARCCOSH", "FUNC_ARCTANH", 
                      "FUNC_ECOS", "FUNC_ESIN", "FUNC_EDELTAAMPLITUDE", 
                      "FUNC_ARCECOS", "FUNC_ARCESIN", "FUNC_ARCEDELTAAMPLITUDE", 
                      "FUNC_SQRT", "FUNC_BINOMIAL", "CMD_TIMES", "CMD_CDOT", 
                      "CMD_DIV", "CMD_FRAC", "NUMBER", "DERIVATIVE", "VARIABLE", 
                      "MIXNUMBER", "WORD", "INFINITY", "EQ", "INEQUALITIES", 
                      "BANG", "GREEKLETTER", "LETTERFUNCTIONBRACE", "LETTERFUNCTIONPAREN", 
                      "GREEKFUNCTIONBRACE", "GREEKFUNCTIONPAREN", "WS" ]

    RULE_math = 0
    RULE_megaExpr = 1
    RULE_specialExpr = 2
    RULE_expr = 3
    RULE_integralExpr = 4
    RULE_continuedFactionExpr = 5
    RULE_continuedFactionInequalityExpr = 6
    RULE_summationExpr = 7
    RULE_summationInequalityExpr = 8
    RULE_productExpr = 9
    RULE_productInequalityExpr = 10
    RULE_tailExpr = 11
    RULE_funcParams = 12
    RULE_funcIneqParams = 13
    RULE_implicitMultiplicationExpr = 14
    RULE_subtractionExpr = 15
    RULE_additionExpr = 16
    RULE_divisionExpr = 17
    RULE_multiplicationExpr = 18
    RULE_fracExpr = 19
    RULE_powExpr = 20
    RULE_exponentiationExpr = 21
    RULE_signedAtom = 22
    RULE_negateAtom = 23
    RULE_localMultiplication = 24
    RULE_atom = 25
    RULE_variable = 26
    RULE_indexedVariable = 27
    RULE_constant = 28
    RULE_number = 29
    RULE_absolute = 30
    RULE_exactDivision = 31
    RULE_factorial = 32
    RULE_binomial = 33
    RULE_func = 34
    RULE_funcname = 35
    RULE_bracedMultiExpr = 36
    RULE_parenMultiExpr = 37
    RULE_multiExpr = 38
    RULE_bracedExpr = 39
    RULE_brackExpr = 40
    RULE_parenExpr = 41
    RULE_subexpr = 42
    RULE_supexpr = 43
    RULE_subeq = 44
    RULE_subIneq = 45
    RULE_equality = 46
    RULE_inequality = 47

    ruleNames =  [ "math", "megaExpr", "specialExpr", "expr", "integralExpr", 
                   "continuedFactionExpr", "continuedFactionInequalityExpr", 
                   "summationExpr", "summationInequalityExpr", "productExpr", 
                   "productInequalityExpr", "tailExpr", "funcParams", "funcIneqParams", 
                   "implicitMultiplicationExpr", "subtractionExpr", "additionExpr", 
                   "divisionExpr", "multiplicationExpr", "fracExpr", "powExpr", 
                   "exponentiationExpr", "signedAtom", "negateAtom", "localMultiplication", 
                   "atom", "variable", "indexedVariable", "constant", "number", 
                   "absolute", "exactDivision", "factorial", "binomial", 
                   "func", "funcname", "bracedMultiExpr", "parenMultiExpr", 
                   "multiExpr", "bracedExpr", "brackExpr", "parenExpr", 
                   "subexpr", "supexpr", "subeq", "subIneq", "equality", 
                   "inequality" ]

    EOF = Token.EOF
    PLUS=1
    MINUS=2
    MUL=3
    DIV=4
    L_PAREN=5
    R_PAREN=6
    L_BRACE=7
    R_BRACE=8
    L_BRACKET=9
    R_BRACKET=10
    COMMA=11
    DOT=12
    BAR=13
    UNDERSCORE=14
    CARET=15
    COLON=16
    FUNC_LIM=17
    LIM_APPROACH_SYM=18
    FUNC_FRAC=19
    FUNC_INT=20
    FUNC_SUM=21
    FUNC_PROD=22
    FUNC_LOG=23
    FUNC_LN=24
    FUNC_SIN=25
    FUNC_COS=26
    FUNC_TAN=27
    FUNC_CSC=28
    FUNC_SEC=29
    FUNC_COT=30
    FUNC_ARCSIN=31
    FUNC_ARCCOS=32
    FUNC_ARCTAN=33
    FUNC_ARCCSC=34
    FUNC_ARCSEC=35
    FUNC_ARCCOT=36
    FUNC_SINH=37
    FUNC_COSH=38
    FUNC_TANH=39
    FUNC_ARCSINH=40
    FUNC_ARCCOSH=41
    FUNC_ARCTANH=42
    FUNC_ECOS=43
    FUNC_ESIN=44
    FUNC_EDELTAAMPLITUDE=45
    FUNC_ARCECOS=46
    FUNC_ARCESIN=47
    FUNC_ARCEDELTAAMPLITUDE=48
    FUNC_SQRT=49
    FUNC_BINOMIAL=50
    CMD_TIMES=51
    CMD_CDOT=52
    CMD_DIV=53
    CMD_FRAC=54
    NUMBER=55
    DERIVATIVE=56
    VARIABLE=57
    MIXNUMBER=58
    WORD=59
    INFINITY=60
    EQ=61
    INEQUALITIES=62
    BANG=63
    GREEKLETTER=64
    LETTERFUNCTIONBRACE=65
    LETTERFUNCTIONPAREN=66
    GREEKFUNCTIONBRACE=67
    GREEKFUNCTIONPAREN=68
    WS=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MatexParser.ExprContext,0)


        def EOF(self):
            return self.getToken(MatexParser.EOF, 0)

        def getRuleIndex(self):
            return MatexParser.RULE_math

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMath" ):
                listener.enterMath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMath" ):
                listener.exitMath(self)




    def math(self):

        localctx = MatexParser.MathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_math)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.expr()
            self.state = 97
            self.match(MatexParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MegaExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subtractionExpr(self):
            return self.getTypedRuleContext(MatexParser.SubtractionExprContext,0)


        def specialExpr(self):
            return self.getTypedRuleContext(MatexParser.SpecialExprContext,0)


        def MUL(self):
            return self.getToken(MatexParser.MUL, 0)

        def implicitMultiplicationExpr(self):
            return self.getTypedRuleContext(MatexParser.ImplicitMultiplicationExprContext,0)


        def megaExpr(self):
            return self.getTypedRuleContext(MatexParser.MegaExprContext,0)


        def PLUS(self):
            return self.getToken(MatexParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(MatexParser.MINUS, 0)

        def getRuleIndex(self):
            return MatexParser.RULE_megaExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMegaExpr" ):
                listener.enterMegaExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMegaExpr" ):
                listener.exitMegaExpr(self)



    def megaExpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MatexParser.MegaExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_megaExpr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 100
                self.subtractionExpr(0)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MatexParser.MUL:
                    self.state = 101
                    self.match(MatexParser.MUL)


                self.state = 104
                self.specialExpr()
                pass

            elif la_ == 2:
                self.state = 106
                self.implicitMultiplicationExpr(0)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MatexParser.MUL:
                    self.state = 107
                    self.match(MatexParser.MUL)


                self.state = 110
                self.specialExpr()
                pass

            elif la_ == 3:
                self.state = 112
                self.specialExpr()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 126
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 124
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = MatexParser.MegaExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_megaExpr)
                        self.state = 115
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 116
                        self.match(MatexParser.PLUS)
                        self.state = 117
                        self.specialExpr()
                        pass

                    elif la_ == 2:
                        localctx = MatexParser.MegaExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_megaExpr)
                        self.state = 118
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 119
                        self.match(MatexParser.MINUS)
                        self.state = 120
                        self.specialExpr()
                        pass

                    elif la_ == 3:
                        localctx = MatexParser.MegaExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_megaExpr)
                        self.state = 121
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 122
                        self.match(MatexParser.MUL)
                        self.state = 123
                        self.specialExpr()
                        pass

             
                self.state = 128
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class SpecialExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integralExpr(self):
            return self.getTypedRuleContext(MatexParser.IntegralExprContext,0)


        def continuedFactionExpr(self):
            return self.getTypedRuleContext(MatexParser.ContinuedFactionExprContext,0)


        def continuedFactionInequalityExpr(self):
            return self.getTypedRuleContext(MatexParser.ContinuedFactionInequalityExprContext,0)


        def summationExpr(self):
            return self.getTypedRuleContext(MatexParser.SummationExprContext,0)


        def summationInequalityExpr(self):
            return self.getTypedRuleContext(MatexParser.SummationInequalityExprContext,0)


        def productExpr(self):
            return self.getTypedRuleContext(MatexParser.ProductExprContext,0)


        def productInequalityExpr(self):
            return self.getTypedRuleContext(MatexParser.ProductInequalityExprContext,0)


        def getRuleIndex(self):
            return MatexParser.RULE_specialExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecialExpr" ):
                listener.enterSpecialExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecialExpr" ):
                listener.exitSpecialExpr(self)




    def specialExpr(self):

        localctx = MatexParser.SpecialExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_specialExpr)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.integralExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.continuedFactionExpr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.continuedFactionInequalityExpr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.summationExpr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 133
                self.summationInequalityExpr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 134
                self.productExpr()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 135
                self.productInequalityExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subtractionExpr(self):
            return self.getTypedRuleContext(MatexParser.SubtractionExprContext,0)


        def implicitMultiplicationExpr(self):
            return self.getTypedRuleContext(MatexParser.ImplicitMultiplicationExprContext,0)


        def megaExpr(self):
            return self.getTypedRuleContext(MatexParser.MegaExprContext,0)


        def getRuleIndex(self):
            return MatexParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = MatexParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.subtractionExpr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.implicitMultiplicationExpr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.megaExpr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegralExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_INT(self):
            return self.getToken(MatexParser.FUNC_INT, 0)

        def subexpr(self):
            return self.getTypedRuleContext(MatexParser.SubexprContext,0)


        def supexpr(self):
            return self.getTypedRuleContext(MatexParser.SupexprContext,0)


        def L_BRACE(self):
            return self.getToken(MatexParser.L_BRACE, 0)

        def expr(self):
            return self.getTypedRuleContext(MatexParser.ExprContext,0)


        def DERIVATIVE(self):
            return self.getToken(MatexParser.DERIVATIVE, 0)

        def R_BRACE(self):
            return self.getToken(MatexParser.R_BRACE, 0)

        def getRuleIndex(self):
            return MatexParser.RULE_integralExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegralExpr" ):
                listener.enterIntegralExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegralExpr" ):
                listener.exitIntegralExpr(self)




    def integralExpr(self):

        localctx = MatexParser.IntegralExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_integralExpr)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(MatexParser.FUNC_INT)
                self.state = 144
                self.subexpr()
                self.state = 145
                self.supexpr()
                self.state = 146
                self.match(MatexParser.L_BRACE)
                self.state = 147
                self.expr()
                self.state = 148
                self.match(MatexParser.DERIVATIVE)
                self.state = 149
                self.match(MatexParser.R_BRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(MatexParser.FUNC_INT)
                self.state = 152
                self.subexpr()
                self.state = 153
                self.supexpr()
                self.state = 154
                self.expr()
                self.state = 155
                self.match(MatexParser.DERIVATIVE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinuedFactionExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_FRAC(self):
            return self.getToken(MatexParser.FUNC_FRAC, 0)

        def funcParams(self):
            return self.getTypedRuleContext(MatexParser.FuncParamsContext,0)


        def tailExpr(self):
            return self.getTypedRuleContext(MatexParser.TailExprContext,0)


        def getRuleIndex(self):
            return MatexParser.RULE_continuedFactionExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinuedFactionExpr" ):
                listener.enterContinuedFactionExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinuedFactionExpr" ):
                listener.exitContinuedFactionExpr(self)




    def continuedFactionExpr(self):

        localctx = MatexParser.ContinuedFactionExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_continuedFactionExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(MatexParser.FUNC_FRAC)
            self.state = 160
            self.funcParams()
            self.state = 161
            self.tailExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinuedFactionInequalityExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_FRAC(self):
            return self.getToken(MatexParser.FUNC_FRAC, 0)

        def funcIneqParams(self):
            return self.getTypedRuleContext(MatexParser.FuncIneqParamsContext,0)


        def tailExpr(self):
            return self.getTypedRuleContext(MatexParser.TailExprContext,0)


        def getRuleIndex(self):
            return MatexParser.RULE_continuedFactionInequalityExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinuedFactionInequalityExpr" ):
                listener.enterContinuedFactionInequalityExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinuedFactionInequalityExpr" ):
                listener.exitContinuedFactionInequalityExpr(self)




    def continuedFactionInequalityExpr(self):

        localctx = MatexParser.ContinuedFactionInequalityExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_continuedFactionInequalityExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(MatexParser.FUNC_FRAC)
            self.state = 164
            self.funcIneqParams()
            self.state = 165
            self.tailExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SummationExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_SUM(self):
            return self.getToken(MatexParser.FUNC_SUM, 0)

        def funcParams(self):
            return self.getTypedRuleContext(MatexParser.FuncParamsContext,0)


        def tailExpr(self):
            return self.getTypedRuleContext(MatexParser.TailExprContext,0)


        def getRuleIndex(self):
            return MatexParser.RULE_summationExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSummationExpr" ):
                listener.enterSummationExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSummationExpr" ):
                listener.exitSummationExpr(self)




    def summationExpr(self):

        localctx = MatexParser.SummationExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_summationExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(MatexParser.FUNC_SUM)
            self.state = 168
            self.funcParams()
            self.state = 169
            self.tailExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SummationInequalityExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_SUM(self):
            return self.getToken(MatexParser.FUNC_SUM, 0)

        def funcIneqParams(self):
            return self.getTypedRuleContext(MatexParser.FuncIneqParamsContext,0)


        def tailExpr(self):
            return self.getTypedRuleContext(MatexParser.TailExprContext,0)


        def getRuleIndex(self):
            return MatexParser.RULE_summationInequalityExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSummationInequalityExpr" ):
                listener.enterSummationInequalityExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSummationInequalityExpr" ):
                listener.exitSummationInequalityExpr(self)




    def summationInequalityExpr(self):

        localctx = MatexParser.SummationInequalityExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_summationInequalityExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(MatexParser.FUNC_SUM)
            self.state = 172
            self.funcIneqParams()
            self.state = 173
            self.tailExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProductExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_PROD(self):
            return self.getToken(MatexParser.FUNC_PROD, 0)

        def funcParams(self):
            return self.getTypedRuleContext(MatexParser.FuncParamsContext,0)


        def tailExpr(self):
            return self.getTypedRuleContext(MatexParser.TailExprContext,0)


        def getRuleIndex(self):
            return MatexParser.RULE_productExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProductExpr" ):
                listener.enterProductExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProductExpr" ):
                listener.exitProductExpr(self)




    def productExpr(self):

        localctx = MatexParser.ProductExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_productExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(MatexParser.FUNC_PROD)
            self.state = 176
            self.funcParams()
            self.state = 177
            self.tailExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProductInequalityExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_PROD(self):
            return self.getToken(MatexParser.FUNC_PROD, 0)

        def funcIneqParams(self):
            return self.getTypedRuleContext(MatexParser.FuncIneqParamsContext,0)


        def tailExpr(self):
            return self.getTypedRuleContext(MatexParser.TailExprContext,0)


        def getRuleIndex(self):
            return MatexParser.RULE_productInequalityExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProductInequalityExpr" ):
                listener.enterProductInequalityExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProductInequalityExpr" ):
                listener.exitProductInequalityExpr(self)




    def productInequalityExpr(self):

        localctx = MatexParser.ProductInequalityExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_productInequalityExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(MatexParser.FUNC_PROD)
            self.state = 180
            self.funcIneqParams()
            self.state = 181
            self.tailExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TailExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MatexParser.ExprContext,0)


        def bracedExpr(self):
            return self.getTypedRuleContext(MatexParser.BracedExprContext,0)


        def getRuleIndex(self):
            return MatexParser.RULE_tailExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTailExpr" ):
                listener.enterTailExpr(self)
